import org.objectweb.asm.*
import java.util.jar.*

buildscript {
    repositories {
        mavenCentral()
    }
    dependencies {
        classpath 'org.ow2.asm:asm:9.6'
    }
}

plugins {
    id 'java-library'
    id 'maven-publish'
    id 'idea'
    id 'fabric-loom' version '1.7-SNAPSHOT'
}

version = project.mod_version
group = project.mod_group_id
base {
    archivesName = project.mod_id
}

repositories {
    mavenLocal()
    mavenCentral()
    maven { url = "https://maven.fabricmc.net/" }
    maven { url = "https://maven.parchmentmc.org" }
}

java {
    toolchain {
        languageVersion = JavaLanguageVersion.of(21)
    }
}

tasks.withType(JavaCompile).configureEach {
    options.compilerArgs.add('--enable-preview')
    options.compilerArgs.add("--add-modules")
    options.compilerArgs.add("jdk.incubator.vector")
}

loom {
    runs {
        client {
            client()
            vmArgs "--enable-preview", "--add-modules", "jdk.incubator.vector"
        }
        server {
            server()
            vmArgs "--enable-preview", "--add-modules", "jdk.incubator.vector"
        }
    }
}

dependencies {
    minecraft "com.mojang:minecraft:${project.minecraft_version}"

    mappings loom.layered() {
        officialMojangMappings()
        parchment("org.parchmentmc.data:parchment-${project.parchment_minecraft_version}:${project.parchment_mappings_version}@zip")
    }

    modImplementation "net.fabricmc:fabric-loader:${project.loader_version}"
    modImplementation "net.fabricmc.fabric-api:fabric-api:${project.fabric_version}"

    def joclVersion = "2.0.5"
    implementation("org.jocl:jocl:${joclVersion}")
    include(group: "org.jocl", name: "jocl", version: joclVersion)
}

processResources {
    def replaceProperties = [
            minecraft_version      : project.minecraft_version,
            loader_version         : project.loader_version,
            mod_id                 : project.mod_id,
            mod_name               : project.mod_name,
            mod_version            : project.mod_version,
            mod_description        : project.mod_description,
            mod_license            : project.mod_license,
            mod_authors            : project.mod_authors
    ]

    inputs.properties replaceProperties

    filesMatching("fabric.mod.json") {
        expand replaceProperties
    }
}

sourceSets.main.resources.srcDirs += 'src/generated/resources'

jar.doLast {
    File jarFile = archiveFile.get().asFile
    println "正在移除预览版标记: ${jarFile.name}..."

    File tempFile = new File(jarFile.parent, jarFile.name + ".temp")

    try (JarFile jar = new JarFile(jarFile);
         JarOutputStream jos = new JarOutputStream(new FileOutputStream(tempFile))) {

        Enumeration<JarEntry> entries = jar.entries()
        while (entries.hasMoreElements()) {
            JarEntry entry = entries.nextElement()
            InputStream is = jar.getInputStream(entry)

            if (!entry.getName().endsWith(".class")) {
                jos.putNextEntry(new JarEntry(entry.getName()))
                is.transferTo(jos)
                continue
            }

            ClassReader cr = new ClassReader(is)
            ClassWriter cw = new ClassWriter(0)

            ClassVisitor cv = new ClassVisitor(Opcodes.ASM9, cw) {
                @Override
                void visit(int version, int access, String name, String signature, String superName, String[] interfaces) {
                    int newVersion = version & ~Opcodes.V_PREVIEW
                    super.visit(newVersion, access, name, signature, superName, interfaces)
                }
            }

            cr.accept(cv, 0)

            JarEntry newEntry = new JarEntry(entry.getName())
            jos.putNextEntry(newEntry)
            jos.write(cw.toByteArray())
        }
    }

    if (jarFile.delete()) {
        if (!tempFile.renameTo(jarFile)) {
            throw new RuntimeException("无法重命名临时文件！")
        }
        println "预览版标记移除成功！"
    } else {
        throw new RuntimeException("无法删除原始 Jar 文件！")
    }
}

publishing {
    publications {
        register('mavenJava', MavenPublication) {
            from components.java
        }
    }
    repositories {
        maven {
            url "file://${project.projectDir}/repo"
        }
    }
}

idea {
    module {
        downloadSources = true
        downloadJavadoc = true
    }
}

def cppScript = file('cpp-build.gradle')
if (cppScript.exists()) {
    apply from: cppScript
}